Kiran & Kumaran | #526 | Fixed the IUD Place text overflow in PNC register (PP FP) if the IUD place is Private Facility.

--- a/dristhi-app/assets/css/custom.css
+++ b/dristhi-app/assets/css/custom.css
@@ -1155,3 +1155,10 @@ img.pnc-child-img {
 .btn-fill-cell {
     min-height: 70px;
 }
+
+.iud-place {
+    display: inline-block;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
